# hcore

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.in  CPackConfig-debug.cmake  CPackConfig-release.cmake  Config.cmake.in  Dockerfile  Doxyfile  Jenkinsfile  LICENSE  MultiCPackConfig.cmake  README-zh.md  README.md  build.sh  build_on_docker.sh  hcore_config.h.in
.devcontainer/: devcontainer.json
.gcmake/: config
.github/workflows/: ci.yml  debug.yml  release.yml
docs/: README-zh.md
docs/example/: CMakeLists.txt  e_log.c
include/: hcore_array.h  hcore_astring.h  hcore_base.h  hcore_buf.h  hcore_connection.h  hcore_constant.h  hcore_count.h  hcore_crc32.h  hcore_debug.h  hcore_event.h  hcore_hash.h  hcore_htb.h  hcore_inet.h  hcore_io.h  hcore_lib.h  hcore_list.h  hcore_log.h  hcore_map.h  hcore_pack.h  hcore_path.h  hcore_pid.h  hcore_pool.h  hcore_queue.h  hcore_radix_tree.h  hcore_rbtree.h  hcore_shmtx.h  hcore_shpool.h  hcore_string.h  hcore_time.h  hcore_types.h
src/: hcore_array.c  hcore_astring.c  hcore_base.c  hcore_buf.c  hcore_connection.c  hcore_count.c  hcore_crc32.c  hcore_debug.c  hcore_event.c  hcore_hash.c  hcore_htb.c  hcore_inet.c  hcore_io.c  hcore_lib.c  hcore_list.c  hcore_log.c  hcore_map.c  hcore_pack.c  hcore_path.c  hcore_pid.c  hcore_pool.c  hcore_queue.c  hcore_radix_tree.c  hcore_rbtree.c  hcore_shmtx.c  hcore_shpool.c  hcore_string.c  hcore_time.c
tests/: 00_test_log.cpp  01_test_astring.cpp  10_test_shpool.cpp  11_test_shmtx.cpp  test_shmtx.cpp  test_shpool.cpp
tools/: gen_cmakelists.pl
